Build in blazar

--- a/jersey-server/pom.xml
+++ b/jersey-server/pom.xml
@@ -50,6 +50,7 @@
         <version>1.19</version>
     </parent>
     <artifactId>jersey-server</artifactId>
+    <version>1.19-hubspot-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jersey-server</name>
     <dependencies>
@@ -172,6 +173,15 @@
                 <filtering>true</filtering>
             </testResource>
         </testResources>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
         <plugins>
             <plugin>
