--- a/jersey-core/pom.xml
+++ b/jersey-core/pom.xml
@@ -51,6 +51,7 @@
     </parent>
 
     <artifactId>jersey-core</artifactId>
+    <version>1.19-hubspot-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jersey-core</name>
 
@@ -142,6 +143,15 @@
                 <filtering>true</filtering>
             </testResource>
         </testResources>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
         <plugins>
             <plugin>
