--- a/jersey-servlet/pom.xml
+++ b/jersey-servlet/pom.xml
@@ -50,6 +50,7 @@
         <version>1.19</version>
     </parent>
     <artifactId>jersey-servlet</artifactId>
+    <version>1.19-hubspot-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>jersey-servlet</name>
 
@@ -170,6 +171,15 @@
                 <filtering>true</filtering>
             </resource>
         </resources>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-deploy-plugin</artifactId>
+                    <version>2.8.2</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
 
         <plugins>
 
